qcacld-3.0: Enable -Wmissing-prototypes
Enable the compiler's -Wmissing-prototypes switch. This will help
catch two types of issues:

1) Implementations which do not include their header file which
   prevents the compiler from verifying that the signature of the
   implementation matches the signature of the prototype.

2) Functions which should be static but which are missing the 'static'
   keyword.

Change-Id: I4f8e45b40e57bdf7bec40e3d72cc48e7bfe15b7b
CRs-Fixed: 1074336

--- a/qcom/opensource/wlan/qcacld-3.0/Kbuild
+++ b/qcom/opensource/wlan/qcacld-3.0/Kbuild
@@ -1750,6 +1750,7 @@ ifneq (y,$(CONFIG_ARCH_MSM))
 EXTRA_CFLAGS += -Wframe-larger-than=4096
 endif
 endif
+EXTRA_CFLAGS += -Wmissing-prototypes
 
 ifeq ($(call cc-option-yn, -Wheader-guard),y)
 EXTRA_CFLAGS += -Wheader-guard
