qcacld-3.0: Add .c files for REO CMD/STATUS ring processing
Add dp_reo.c & hal_reo.c for REO CMD/STATUS ring processing
dp_reo.c implements the logic & hal_reo.c implements the
HW abstractions.

Change-Id: I1150b66d3505101645430a1e64403a20716d1d59
CRs-Fixed: 1103135

--- a/qcom/opensource/wlan/qcacld-3.0/Kbuild
+++ b/qcom/opensource/wlan/qcacld-3.0/Kbuild
@@ -848,7 +848,8 @@ DP_OBJS := $(DP_SRC)/dp_main.o \
 		$(DP_SRC)/dp_rx_err.o \
 		$(DP_SRC)/dp_htt.o \
 		$(DP_SRC)/dp_peer.o \
-		$(DP_SRC)/dp_rx_desc.o
+		$(DP_SRC)/dp_rx_desc.o \
+		$(DP_SRC)/dp_reo.o
 
 ############ CFG ############
 WCFG_DIR := $(WLAN_COMMON_ROOT)/wlan_cfg
@@ -1028,7 +1029,8 @@ HAL_INC :=	-I$(WLAN_COMMON_INC)/$(HAL_DIR)/inc \
 
 HAL_OBJS :=	$(WLAN_COMMON_ROOT)/$(HAL_DIR)/wifi3.0/hal_srng.o \
 		$(WLAN_COMMON_ROOT)/$(HAL_DIR)/wifi3.0/hal_rx.o \
-		$(WLAN_COMMON_ROOT)/$(HAL_DIR)/wifi3.0/hal_wbm.o
+		$(WLAN_COMMON_ROOT)/$(HAL_DIR)/wifi3.0/hal_wbm.o \
+		$(WLAN_COMMON_ROOT)/$(HAL_DIR)/wifi3.0/hal_reo.o
 
 ############ WMA ############
 WMA_DIR :=	core/wma
